--- a/OneDrive/Desktop/CS460/banking-api/.gitignore
+++ b/OneDrive/Desktop/CS460/banking-api/.gitignore
@@ -31,3 +31,6 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# Ignore application-default.properties in resources
+src/main/resources/application-default.properties
