--- a/OneDrive/Desktop/CS460/banking-api/src/main/resources/application.properties
+++ b/OneDrive/Desktop/CS460/banking-api/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-spring.application.name=banking-api.
+spring.datasource.url=jdbc:mysql://gdiascs460.cr2w0aycgrh4.us-east-1.rds.amazonaws.com:3306/gdiascs460
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# ✅ Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+spring.jpa.open-in-view=true
